# to-do-list

./: .gitignore  README.md  Rule.md  apply_template.json  basic_test.py  check_status.py  claude.md  final_calendar_test.py  final_project_test.py  final_scheduler_test.py  import_test.py  manual_pomodoro_test.py  model.md  product_requirements.md  relations.md  simple_check.py  simple_pomodoro_test.py  simple_scheduler_test.py  simple_timeblock_test.py  test_data_visualization_report_api.py  test_pomodoro_interface.py  test_pomodoro_session_manager_api.py  test_profile_simple.py  test_project_api.py  test_settings_api.py  test_tag_manager_api.py  test_task.json  test_task_form_api.py  test_template.json  test_time_block_scheduler_api.py  test_timeblock_features.md  test_timeblock_functionality.py  test_timeblock_template_api.py  verify_setup.py
backend/: .env.example  =4.0.0  app.py  config.py  init_db.py  init_sample_data.py  pyproject.toml  pytest.ini
backend/app/: __init__.py
backend/config/: __init__.py
backend/instance/: time_management.db
backend/models/: __init__.py  pomodoro_session.py  project.py  tag.py  task.py  task_category.py  task_tags.py  time_block.py  time_block_template.py  time_block_template_config.py  user.py
backend/routes/: auth_routes.py  pomodoro_session_routes.py  project_routes.py  recommendation_routes.py  tag_routes.py  task_category_routes.py  task_routes.py  time_block_routes.py  time_block_template_routes.py  user_routes.py
backend/services/: category_timeblock_matching.py  conflict_resolution.py  recommendation_service.py
(+85 files in other folders)
