[project]
name = "time-management-backend"
version = "0.1.0"
description = "智能时间管理系统后端"
authors = [
    {name = "Developer", email = "dev@example.com"}
]
dependencies = [
    "flask>=3.0.0",
    "flask-sqlalchemy>=3.1.0",
    "flask-migrate>=4.0.0",
    "flask-jwt-extended>=4.5.0",
    "marshmallow>=3.20.0",
    "python-dotenv>=1.0.0",
    "werkzeug>=3.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-flask>=1.2.0",
    "black>=23.0.0",
    "flake8>=6.0.0"
]

[tool.uv]
dev-dependencies = ["pytest>=7.4.0", "pytest-flask>=1.2.0", "black>=23.0.0", "flake8>=6.0.0"]